plugin logpipe-output-kafka.so add option 'zookeeper'

--- a/conf/logpipe_case6_input_file_and_output_kafka.conf
+++ b/conf/logpipe_case6_input_file_and_output_kafka.conf
@@ -7,11 +7,13 @@
 	
 	"inputs" : 
 	[
-		{ "plugin":"so/logpipe-input-file.so" , "path":"/home/nhx_lhh/log" }
+		{ "plugin":"so/logpipe-input-file.so" , "path":"/home/nhx_lhh/log" , "line_mode":1 }
 	] ,
 	
 	"outputs" : 
 	[
-		{ "plugin":"so/logpipe-output-kafka.so" , "bootstrap_servers":"127.0.0.1:9092" , "topic":"test_topic" }
+		// { "plugin":"so/logpipe-output-kafka.so" , "bootstrap_servers":"127.0.0.1:9092" , "topic":"test_topic" }
+		{ "plugin":"so/logpipe-output-kafka.so" , "bootstrap_servers":"kafka1:9092,kafka2:9093,kafka3:9094" , "topic":"test_topic" }
+		// { "plugin":"so/logpipe-output-kafka-with-zookeeper.so" , "zookeeper":"zookeeper1:2181,zookeeper2:2182,zookeeper3:2183" , "topic":"test_topic" }
 	]
 }
