--- a/src-plugins/makefile
+++ b/src-plugins/makefile
@@ -51,6 +51,8 @@ LFLAGS		=	$(_LFLAGS) \
 
 ###### 额外宏定义区
 CLEAN_ADDITION	=	fasterhttp.o \
+			logpipe-input-kafka.so \
+			logpipe-input-kafka-with-zookeeper.so \
 			logpipe-output-hdfs.so \
 			logpipe-output-kafka.so \
 			logpipe-output-kafka-with-zookeeper.so \
@@ -100,24 +102,37 @@ logpipe-output-hdfs.so		:	logpipe-output-hdfs.o
 	$(CC) -o $@ logpipe-output-hdfs.o $(SOFLAGS) $(LFLAGS_hdfs)
 
 CFLAGS_kafka			=	$(CFLAGS) -I$(HOME)/include/librdkafka
+CFLAGS_kafka_with_zookeeper	=	$(CFLAGS) -I$(HOME)/include/librdkafka -I$(HOME)/include/zookeeper
+
+kafka_with_zookeeper.o			:	kafka_with_zookeeper.c
+	$(CC) $(CFLAGS_kafka_with_zookeeper) -c kafka_with_zookeeper.c
+
+LFLAGS_kafka			=	$(LFLAGS) -L$(HOME)/lib -lrdkafka
+LFLAGS_kafka_zookeeper		=	$(LFLAGS) -L$(HOME)/lib -lrdkafka -lzookeeper_mt
+
+logpipe-input-kafka.o		:	logpipe-input-kafka.c
+	$(CC) $(CFLAGS_kafka) -c logpipe-input-kafka.c
+
+logpipe-input-kafka-with-zookeeper.o:	logpipe-input-kafka.c
+	$(CC) $(CFLAGS_kafka_with_zookeeper) -D_WITH_ZOOKEEPER -o logpipe-input-kafka-with-zookeeper.o -c logpipe-input-kafka.c
+
+logpipe-input-kafka.so		:	logpipe-input-kafka.o
+	$(CC) -o $@ logpipe-input-kafka.o $(SOFLAGS) $(LFLAGS_kafka)
+
+logpipe-input-kafka-with-zookeeper.so:	logpipe-input-kafka-with-zookeeper.o kafka_with_zookeeper.o
+	$(CC) -o $@ logpipe-input-kafka-with-zookeeper.o kafka_with_zookeeper.o $(SOFLAGS) $(LFLAGS_kafka_zookeeper)
 
 logpipe-output-kafka.o		:	logpipe-output-kafka.c
 	$(CC) $(CFLAGS_kafka) -c logpipe-output-kafka.c
 
-CFLAGS_kafka_zookeeper		=	$(CFLAGS) -I$(HOME)/include/librdkafka -I$(HOME)/include/zookeeper
-
 logpipe-output-kafka-with-zookeeper.o:	logpipe-output-kafka.c
-	$(CC) $(CFLAGS_kafka_zookeeper) -D_WITH_ZOOKEEPER -o logpipe-output-kafka-with-zookeeper.o -c logpipe-output-kafka.c
-
-LFLAGS_kafka			=	$(LFLAGS) -L$(HOME)/lib -lrdkafka
+	$(CC) $(CFLAGS_kafka_with_zookeeper) -D_WITH_ZOOKEEPER -o logpipe-output-kafka-with-zookeeper.o -c logpipe-output-kafka.c
 
 logpipe-output-kafka.so		:	logpipe-output-kafka.o
 	$(CC) -o $@ logpipe-output-kafka.o $(SOFLAGS) $(LFLAGS_kafka)
 
-LFLAGS_kafka_zookeeper		=	$(LFLAGS) -L$(HOME)/lib -lrdkafka -lzookeeper_mt
-
-logpipe-output-kafka-with-zookeeper.so:	logpipe-output-kafka-with-zookeeper.o
-	$(CC) -o $@ logpipe-output-kafka-with-zookeeper.o $(SOFLAGS) $(LFLAGS_kafka_zookeeper)
+logpipe-output-kafka-with-zookeeper.so:	logpipe-output-kafka-with-zookeeper.o kafka_with_zookeeper.o
+	$(CC) -o $@ logpipe-output-kafka-with-zookeeper.o kafka_with_zookeeper.o $(SOFLAGS) $(LFLAGS_kafka_zookeeper)
 
 logpipe-output-ingeek.so	:	logpipe-output-ingeek.o
 	$(CC) -o $@ logpipe-output-ingeek.o $(SOFLAGS) $(LFLAGS)
