--- a/conf/logpipe_case9_input_kafka_and_output_stdout.conf
+++ b/conf/logpipe_case9_input_kafka_and_output_stdout.conf
@@ -7,8 +7,8 @@
 	
 	"inputs" : 
 	[
-		// { "plugin":"so/logpipe-input-kafka.so" , "bootstrap_servers":"kafka1:9092,kafka2:9093,kafka3:9094" , "topic":"test_topic" }
-		{ "plugin":"so/logpipe-input-kafka-with-zookeeper.so" , "zookeeper":"zookeeper1:2181,zookeeper2:2182,zookeeper3:2183" , "topic":"test_topic" , "group":"test_group" }
+		{ "plugin":"so/logpipe-input-kafka.so" , "bootstrap_servers":"kafka1:9092,kafka2:9093,kafka3:9094" , "topic":"test_topic" , "group":"test_group" }
+		// { "plugin":"so/logpipe-input-kafka-with-zookeeper.so" , "zookeeper":"zookeeper1:2181,zookeeper2:2182,zookeeper3:2183" , "topic":"test_topic" , "group":"test_group" }
 	] ,
 	
 	"outputs" : 
